# dotenvcrab

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  env.schema.json  tarpaulin-report.html
.github/workflows/: release.yml
npm-package/: README.md  index.js  package.json
npm-package/scripts/: install.js
scripts/: sync-versions.js
src/: cli.rs  lib.rs  main.rs  output.rs  schema.rs  validation.rs
tests/: cli_test.rs  integration_test.rs  output_test.rs  pattern_validation.rs  schema_test.rs  test_helpers.rs  validation_test.rs
